--- a/rules.html
+++ b/rules.html
@@ -56,14 +56,14 @@
                 <div class="inner">
 
                     <h2 class="major">Mode of competition</h2>
-                    <p>A 3-day (72 hours) “Marathon-alike” data-driven reporting competition</p>
+                    <p style="font-size:18px">A 3-day (72 hours) “Marathon-alike” data-driven reporting competition</p>
 
 
                     <h2 class="major">Eligibility</h2>
-                    <p>All full-time HKBU students (undergraduate, postgraduate, research degree students)</p>
+                    <p style="font-size:18px">All full-time HKBU students (undergraduate, postgraduate, research degree students)</p>
                     <br/>
                     <h2 class="major">Procedure</h2>
-                    <ol>
+                    <ol style="font-size:18px">
                         <li>Participants will first register online. There will be a briefing session on <b><u>15 Mar 2018 (Thursday), pm 19:00 at CVA 1022</u></b>. During the briefing session, the organizers will announce three themes, and kick off the completion.
                         </li><br/>
                         <li>Participants will choose <b>ONE</b> of the themes, and form a group (2 – 3 members per group) during the briefing session. Individuals or groups containing more than 3 people are not accepted. </li>
@@ -76,7 +76,7 @@
                     <br/>
 
                     <h2 class="major">Judging Criteria</h2>
-                    <ol>
+                    <ol style="font-size:18px">
                         <li><b>Editorial quality:</b> <br/>How innovative is the story? How useful will it be to the target audience? How the work can explicate a story? How the story reflects news values, news angles, and the quest for public goods? </li>
                         <br/>
                         <li>
@@ -94,7 +94,7 @@
                     <br/>
 
                     <h2 class="major">Note</h2>
-                    <p>All participants will be provided with the relevant information to start their projects on the briefing session. Teams may begin brainstorming prior to the event, but all works should be built within the three-day (72 hours) timeframe.</p>
+                    <p style="font-size:18px">All participants will be provided with the relevant information to start their projects on the briefing session. Teams may begin brainstorming prior to the event, but all works should be built within the three-day (72 hours) timeframe.</p>
 
 
 
