--- a/index.html
+++ b/index.html
@@ -182,13 +182,10 @@
                                 <p>Uploading your works&nbsp;(4 files in total)</p>
 
                                 <ol>
-                                    <li>The story
-                                        <ul>
-                                            <li>For written story: 1 PDF file</li>
-                                            <li>For video story: 1 video file + 1 script</li>
-                                            <li>For web-based story: 1 URL + 1 folder</li>
-                                        </ul>
-                                    </li>
+                                     <li>The story
+                                        <br/>For written story: 1 PDF file
+                                        <br/>For video story: 1 video file + 1 script
+                                        <br/>For web-based story: 1 URL + 1 folder</li>
 
 
                                     <li>1 file on technical details</li>
