--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
             <div class="inner">
                 <div class="logo"><span class="icon fa-diamond"></span></div>
                 <h2>Data is Beautiful</h2>
-                <p style="font-size:25px">HKBU Data-driven Storytelling Competition 2018</p>
+                <p style="font-size:25px">HKBU Data-driven Storytelling Competition 2018
+		    <br/> 15 March - 18 March
+		    </p>
+		    <a href=# class="button special">Apply Now</a>
             </div>
         </section>
 
@@ -151,7 +154,7 @@
                                 </h2>
                                 <p>Participants registration deadline
                                 </p>
-                                <a href="#" class="button">Apply Now</a>
+                                <a href="#" class="button special">Apply Now</a>
                             </div>
                         </div>
                         <div class="container left">
