--- a/jury.html
+++ b/jury.html
@@ -56,36 +56,56 @@
 
                     <h2 class="major">Jury Panel</h2>
                     <h1 style="font-size:20px"><u>Chair:</u></h1>
-                    <h3> CK Lau</h3>
+                    <a href="http://www.jour.hkbu.edu.hk/eng/people/mr-ck-lau/">
+                        <h3> CK Lau</h3>
+                    </a>
                     <p>Principal Lecturer
                         <br/>Associate Dean, School of Communication</p>
                     <br/>
 
                     <h1 style="font-size:20px"><u>Members:</u></h1>
                     <p>(In alphabetical order)</p>
-                    <h3>Li Chen</h3>
+                    <a href="http://www.comp.hkbu.edu.hk/~lichen/">
+                        <h3>Li Chen</h3>
+                    </a>
                     <p>Assistant Professor, Department of Computer Science</p>
-                    <h3>Bonnie Chiu</h3>
+                    <a href="http://www.jour.hkbu.edu.hk/eng/people/ms-bonnie-chiu/">
+                        <h3>Bonnie Chiu</h3>
+                    </a>
                     <p>Senior Lecturer
                         <br/>Associate Head, School of Communication</p>
-                    <h3>Roselyn Du</h3>
+                    <a href="http://www.jour.hkbu.edu.hk/eng/people/dr-roselyn-du/">
+                        <h3>Roselyn Du</h3>
+                    </a>
                     <p>Associate Professor, School of Communication</p>
-                    <h3>Robin Ewing</h3>
+                    <a href="http://www.jour.hkbu.edu.hk/eng/people/ms-robin-ewing/">
+                        <h3>Robin Ewing</h3>
+                    </a>
                     <p>Senior Lecturer
                         <br/> Director of International Journalism Programme,BSoSc (Hon) in Communication
                         <br/>Associate Director of MA in International Journalism Programme</p>
-                    <h3>Pili Hu</h3>
+                    <a href="http://www.jour.hkbu.edu.hk/eng/people/mr-pili-hu/">
+                        <h3>Pili Hu</h3>
+                    </a>
                     <p>Lecturer</p>
-                    <h3>Jenny Lam</h3>
+                    <a href="http://www.jour.hkbu.edu.hk/eng/people/ms-jenny-lam/">
+                        <h3>Jenny Lam</h3>
+                    </a>
                     <p>Senior Lecturer
                         <br/> Coordinator of Broadcast Journalism Stream, BSoSc (Hon) in Communication</p>
-                    <h3>Raymond Li</h3>
+                    <a href="http://www.jour.hkbu.edu.hk/eng/people/mr-raymond-li/">
+                        <h3>Raymond Li</h3>
+                    </a>
                     <p>Senior Lecturer
                         <br/> Director of Chinese Journalism, BSoSc (Hon) in Communication
                         <br/>Director of MSSc in Media Management</p>
-                    <h3>Stephanie Tsang</h3>
+                    <a href="http://www.jour.hkbu.edu.hk/eng/people/dr-tsang-stephanie-jean/">
+                        <h3>Stephanie Tsang</h3>
+                    </a>
                     <p>Research Assistant Professor</p>
-                    <h3>Xinzhi Zhang </h3>
+                    <a href="http://www.jour.hkbu.edu.hk/eng/people/dr-xinzhi-zhang/">
+                        <h3>Xinzhi Zhang </h3>
+                    </a>
                     <p>Research Assistant Professor
                         <br/>Associate Programme Director of Data and Media Communication Concentration, BSoSc (Hon) in Communication</p>
                     <br/>
