--- a/index.html
+++ b/index.html
@@ -429,6 +429,7 @@
                         <div class="4u"><span class="image fit"><img src="images/HKBUlogo.png" alt="" /></span></div>
                         <div class="4u"><span class="image fit"><img src="images/SchoolComm.png" alt="" /></span></div>
                         <div class="4u$"><span class="image fit"><img src="images/JOURlogo.png" alt="" /></span></div>
+			    <div class="4u"><span class="image fit"><img src="images/DNNLogo.png" alt="" /></span></div>
                     </div>
                 </div>
             </section>
