--- a/index.html
+++ b/index.html
@@ -317,7 +317,11 @@
     <!-- Footer -->
     <section id="footer" class="wrapper.spotlight">
         <div class="inner">
-         
+         <h2 class="major">Contact</h2>
+            <p>Email:
+                <br/>Address:
+                <br/>Telephone:
+            </p>
             <ul class="copyright">
                 <li>&copy; 2018. All Rights Reserved.| <a href="http://www.hkbu.edu.hk/eng/main/index.jsp">Hong Kong Baptist University</a></li>
             </ul>
