--- a/index.html
+++ b/index.html
@@ -187,15 +187,13 @@
                                 <p>Uploading your works&nbsp;(4 files in total)</p>
 
                                 <ol>
-                                     <li>The story
-                                        <br/>For written story: 1 PDF file
-                                        <br/>For video story: 1 video file + 1 script
-                                        <br/>For web-based story: 1 URL + 1 folder</li>
-
-
-                                    <li>1 file on technical details</li>
-                                    <li>1 file on data access</li>
-                                    <li>1 form on labour distribution</li>
+                                     <li>
+                                        The story:
+                                        <b>PDF</b> , <b>video</b> or <b>URL</b>
+                                    </li>
+                                    <li>
+                                        Technical details, inclusing data access and division or labour.
+                                    </li>
 
                                 </ol>
 
