--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
             <div class="inner">
                 <div class="logo"><span class="icon fa-diamond"></span></div>
                 <h2>Data is Beautiful</h2>
-                <p style="font-size:25px">HKBU Data-driven Storytelling Competition 2018
+                <p style="font-size:25px">
+			<b>HKBU Data-driven Storytelling Competition 2018</b>
 		    <br/> 15 March - 18 March
 		    </p>
 		    <a href=# class="button special">Apply Now</a>
@@ -138,9 +139,9 @@
                 <!-- <div class="inner"> -->
 
                 <div class="content">
-
-
-
+			<h2 class="major">
+				<center>The Workflow of the Competition</center>
+					</h2>
 
                     <div class="timeline">
                         <!-- <div class="container left">
@@ -149,6 +150,7 @@
                                 <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
                             </div>
                         </div> -->
+			    <br/>
                         <div class="container right">
                             <div class="content2">
                                 <h2><u>12 March</u>
@@ -208,10 +210,8 @@
                                 <p>Result Announced</p>
                             </div>
                         </div>
-
                     </div>
-
-
+			<br/>
 
 
                 </div>
