--- a/index.html
+++ b/index.html
@@ -90,10 +90,11 @@
                         title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
 					</div> -->
                         <h2 class="major">Rules and Procedures</h2>
-                        <p>The competition is a 3-day "Marathon-alike" data driven news reporting competition.
-                            <br/>Create data-driven story within 72 hours starting from 15 March.
-                            <br/> All HKBU students are welcomed to join.
-                        </p>
+                        <ul>
+                            <li>The competition is a 3-day "Marathon-alike" data driven news reporting competition. </li>
+                            <li>Create data-driven story within 72 hours starting from 15 March.</li>
+                            <li>All HKBU students are welcomed to join. </li>
+                        </ul>
 
                         <a href="rules.html" class="special">Learn more</a>
                     </div>
@@ -189,9 +190,16 @@
                                 <p>Uploading your works&nbsp;(4 files in total)</p>
 
                                 <ol>
-                                     <li>
-                                        The story:
-                                        <b>PDF</b> , <b>video</b> or <b>URL</b>
+                                    <li>
+                                        ONE of the three forms of story:
+                                        <br/>
+                                        <font size="5px"><b>a PDF;</b></font>
+                                        <br/>or
+                                        <font size="5px"><b>a video story;</b></font>
+                                        <br/>or
+                                        <font size="5px"><b>a URL pointing to a web-based story</b></font>
+
+
                                     </li>
                                     <li>
                                         Technical details, inclusing data access and division or labour.
