--- a/jury.html
+++ b/jury.html
@@ -56,58 +56,69 @@
 
                     <h2 class="major">Jury Panel</h2>
                     <h1 style="font-size:20px"><u>Chair:</u></h1>
-                    <a href="http://www.jour.hkbu.edu.hk/eng/people/mr-ck-lau/">
-                        <h3> CK Lau</h3>
-                    </a>
-                    <p>Principal Lecturer
-                        <br/>Associate Dean, School of Communication</p>
+                    <p style="font-size:18px">
+                        <a href="http://www.jour.hkbu.edu.hk/eng/people/mr-ck-lau/">
+                            <b> CK Lau</b>
+                        </a>
+                        &nbsp;(Principal Lecturer; &nbsp;Associate Dean, School of Communication)</p>
                     <br/>
 
                     <h1 style="font-size:20px"><u>Members:</u></h1>
                     <p>(In alphabetical order)</p>
-                    <a href="http://www.comp.hkbu.edu.hk/~lichen/">
-                        <h3>Li Chen</h3>
-                    </a>
-                    <p>Assistant Professor, Department of Computer Science</p>
-                    <a href="http://www.jour.hkbu.edu.hk/eng/people/ms-bonnie-chiu/">
-                        <h3>Bonnie Chiu</h3>
-                    </a>
-                    <p>Senior Lecturer
-                        <br/>Associate Head, School of Communication</p>
-                    <a href="http://www.jour.hkbu.edu.hk/eng/people/dr-roselyn-du/">
-                        <h3>Roselyn Du</h3>
-                    </a>
-                    <p>Associate Professor, School of Communication</p>
-                    <a href="http://www.jour.hkbu.edu.hk/eng/people/ms-robin-ewing/">
-                        <h3>Robin Ewing</h3>
-                    </a>
-                    <p>Senior Lecturer
-                        <br/> Director of International Journalism Programme,BSoSc (Hon) in Communication
-                        <br/>Associate Director of MA in International Journalism Programme</p>
-                    <a href="http://www.jour.hkbu.edu.hk/eng/people/mr-pili-hu/">
-                        <h3>Pili Hu</h3>
-                    </a>
-                    <p>Lecturer</p>
-                    <a href="http://www.jour.hkbu.edu.hk/eng/people/ms-jenny-lam/">
-                        <h3>Jenny Lam</h3>
-                    </a>
-                    <p>Senior Lecturer
-                        <br/> Coordinator of Broadcast Journalism Stream, BSoSc (Hon) in Communication</p>
-                    <a href="http://www.jour.hkbu.edu.hk/eng/people/mr-raymond-li/">
-                        <h3>Raymond Li</h3>
-                    </a>
-                    <p>Senior Lecturer
-                        <br/> Director of Chinese Journalism, BSoSc (Hon) in Communication
-                        <br/>Director of MSSc in Media Management</p>
-                    <a href="http://www.jour.hkbu.edu.hk/eng/people/dr-tsang-stephanie-jean/">
-                        <h3>Stephanie Tsang</h3>
-                    </a>
-                    <p>Research Assistant Professor</p>
-                    <a href="http://www.jour.hkbu.edu.hk/eng/people/dr-xinzhi-zhang/">
-                        <h3>Xinzhi Zhang </h3>
-                    </a>
-                    <p>Research Assistant Professor
-                        <br/>Associate Programme Director of Data and Media Communication Concentration, BSoSc (Hon) in Communication</p>
+
+                    <p style="font-size:18px">
+                        <a href="http://www.comp.hkbu.edu.hk/~lichen/">
+                            <b>Li Chen</b>
+                        </a>
+                        &nbsp;(Assistant Professor, Department of Computer Science;&nbsp; Programme director of Data and Media Communication(DMC))</p>
+
+                    <p style="font-size:18px">
+                        <a href="http://www.jour.hkbu.edu.hk/eng/people/ms-bonnie-chiu/">
+                            <b>Bonnie Chiu</b>
+                        </a>
+                        &nbsp;(Senior Lecturer; &nbsp;Associate Head, Department of Journalism)</p>
+
+                    <p style="font-size:18px">
+                        <a href="http://www.jour.hkbu.edu.hk/eng/people/dr-roselyn-du/">
+                            <b>Roselyn Du</b>
+                        </a>
+                        &nbsp;(Associate Professor, School of Communication; &nbsp;Data and News Society Coordinator)</p>
+
+                    <p style="font-size:18px">
+                        <a href="http://www.jour.hkbu.edu.hk/eng/people/ms-robin-ewing/">
+                            <b>Robin Ewing</b>
+                        </a>
+                        &nbsp;(Senior Lecturer;&nbsp;Director of International Journalism Programme,BSoSc (Hon) in Communication ;&nbsp;Associate Director of MA in International Journalism Programme)</p>
+
+                    <p style="font-size:18px">
+                        <a href="http://www.jour.hkbu.edu.hk/eng/people/mr-pili-hu/">
+                            <b>Pili Hu</b>
+                        </a>
+                        &nbsp;(Lecturer;&nbsp; Management Committee Member of Data and Media Communication(DMC))</p>
+
+                    <p style="font-size:18px">
+                        <a href="http://www.jour.hkbu.edu.hk/eng/people/ms-jenny-lam/">
+                            <b>Jenny Lam</b>
+                        </a>
+                        &nbsp;(Senior Lecturer;&nbsp;Coordinator of Broadcast Journalism Stream, BSoSc (Hon) in Communication)</p>
+
+                    <p style="font-size:18px">
+                        <a href="http://www.jour.hkbu.edu.hk/eng/people/mr-raymond-li/">
+                            <b>Raymond Li</b>
+                        </a>
+                        &nbsp;(Senior Lecturer;&nbsp;Director of Chinese Journalism, BSoSc (Hon) in Communication ;&nbsp;Director of MSSc in Media Management</p>
+
+                    <p style="font-size:18px">
+                        <a href="http://www.jour.hkbu.edu.hk/eng/people/dr-tsang-stephanie-jean/">
+                            <b>Stephanie Tsang</b>
+                        </a>
+                        &nbsp;(Research Assistant Professor)</p>
+
+                    <p style="font-size:18px">
+                        <a href="http://www.jour.hkbu.edu.hk/eng/people/dr-xinzhi-zhang/">
+                            <b>Xinzhi Zhang </b>
+                        </a>
+                        &nbsp;(Research Assistant Professor;&nbsp;Associate Programme Director of Data and Media Communication Concentration, BSoSc (Hon) in Communication)</p>
                     <br/>
                     <br/>
                     <h2 class="major">Organizing Committee</h2>
