--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<b>HKBU Data-driven Storytelling Competition 2018</b>
 		    <br/> 15 March - 18 March
 		    </p>
-		    <a href=# class="button special">Apply Now</a>
+		    <a href=# class="button special" style="padding-left:1em; padding-right:1em">Apply Now</a>
             </div>
         </section>
 
@@ -159,7 +159,7 @@
                                 </h2>
                                 <p>Participants registration deadline
                                 </p>
-                                <a href="#" class="button special">Apply Now</a>
+                                <a href="#" class="button special" style="padding-left:1em; padding-right:1em">Apply Now</a>
                             </div>
                         </div>
                         <div class="container left">
@@ -178,7 +178,7 @@
                                     <li>Picking up ONE submission format <br/>(Text or Video or Web)</li>
                                     <li>Kicking off the project</li>
                                 </ul>
-                                <a href="rules.html" class="button">Details</a>
+                                <a href="rules.html" class="button" style="padding-left:1em; padding-right:1em">Details</a>
 
                             </div>
                         </div>
@@ -208,7 +208,7 @@
                                 </ol>
 
 
-                                <a href="generic.html" class="button">Details</a>
+                                <a href="generic.html" class="button" style="padding-left:1em; padding-right:1em">Details</a>
 
                             </div>
                         </div>
@@ -237,52 +237,70 @@
                         <div class="inner">
 
                             <h2 class="major">Jury Panel</h2>
-                            <h1 style="font-size:17px"><u>Chair:</u></h1>
-                            <a href="http://www.jour.hkbu.edu.hk/eng/people/mr-ck-lau/">
-                                <p style="font-siza:15px"> CK Lau</p>
-                            </a>
+                         <p style="font-size:18px">
+                        <a href="http://www.jour.hkbu.edu.hk/eng/people/mr-ck-lau/">
+                            <b> CK Lau</b>
+                        </a>
+                        &nbsp;(Principal Lecturer; &nbsp;Associate Dean, School of Communication)</p>
+                    <br/>
 
+                    <h1 style="font-size:20px"><u>Members:</u></h1>
+                    <p>(In alphabetical order)</p>
 
-                            <h1 style="font-size:20px"><u>Members:</u></h1>
-                            <p>(In alphabetical order)</p>
-                            <a href="http://www.comp.hkbu.edu.hk/~lichen/">
-                                <p style="font-siza:15px">Li Chen
-                            </a>
-                            <br/>
-                            <a href="http://www.jour.hkbu.edu.hk/eng/people/ms-bonnie-chiu/">
-                                Bonnie Chiu
-                            </a>
-                            <br/>
-                            <a href="http://www.jour.hkbu.edu.hk/eng/people/dr-roselyn-du/">
-                                Roselyn Du
-                            </a>
-                            <br/>
-                            <a href="http://www.jour.hkbu.edu.hk/eng/people/ms-robin-ewing/">
-                                Robin Ewing
-                            </a>
-                            <br/>
-                            <a href="http://www.jour.hkbu.edu.hk/eng/people/mr-pili-hu/">
-                                Pili Hu
-                            </a>
-                            <br/>
-                            <a href="http://www.jour.hkbu.edu.hk/eng/people/ms-jenny-lam/">
-                                Jenny Lam
-                            </a>
-                            <br/>
-                            <a href="http://www.jour.hkbu.edu.hk/eng/people/mr-raymond-li/">
-                                Raymond Li
-                            </a>
+                    <p style="font-size:18px">
+                        <a href="http://www.comp.hkbu.edu.hk/~lichen/">
+                            <b>Li Chen</b>
+                        </a>
+                        &nbsp;(Assistant Professor, Department of Computer Science;&nbsp; Programme director of Data and Media Communication(DMC))</p>
 
-                            <br/>
-                            <a href="http://www.jour.hkbu.edu.hk/eng/people/dr-tsang-stephanie-jean/">
-                                Stephanie Tsang
-                            </a>
-                            <br/>
-                            <a href="http://www.jour.hkbu.edu.hk/eng/people/dr-xinzhi-zhang/">
-                                Xinzhi Zhang 
-							</a>
-                            </p>
-                            <br/>
+                    <p style="font-size:18px">
+                        <a href="http://www.jour.hkbu.edu.hk/eng/people/ms-bonnie-chiu/">
+                            <b>Bonnie Chiu</b>
+                        </a>
+                        &nbsp;(Senior Lecturer; &nbsp;Associate Head, Department of Journalism)</p>
+
+                    <p style="font-size:18px">
+                        <a href="http://www.jour.hkbu.edu.hk/eng/people/dr-roselyn-du/">
+                            <b>Roselyn Du</b>
+                        </a>
+                        &nbsp;(Associate Professor, School of Communication; &nbsp;Data and News Society Coordinator)</p>
+
+                    <p style="font-size:18px">
+                        <a href="http://www.jour.hkbu.edu.hk/eng/people/ms-robin-ewing/">
+                            <b>Robin Ewing</b>
+                        </a>
+                        &nbsp;(Senior Lecturer;&nbsp;Director of International Journalism Programme,BSoSc (Hon) in Communication ;&nbsp;Associate Director of MA in International Journalism Programme)</p>
+
+                    <p style="font-size:18px">
+                        <a href="http://www.jour.hkbu.edu.hk/eng/people/mr-pili-hu/">
+                            <b>Pili Hu</b>
+                        </a>
+                        &nbsp;(Lecturer;&nbsp; Management Committee Member of Data and Media Communication(DMC))</p>
+
+                    <p style="font-size:18px">
+                        <a href="http://www.jour.hkbu.edu.hk/eng/people/ms-jenny-lam/">
+                            <b>Jenny Lam</b>
+                        </a>
+                        &nbsp;(Senior Lecturer;&nbsp;Coordinator of Broadcast Journalism Stream, BSoSc (Hon) in Communication)</p>
+
+                    <p style="font-size:18px">
+                        <a href="http://www.jour.hkbu.edu.hk/eng/people/mr-raymond-li/">
+                            <b>Raymond Li</b>
+                        </a>
+                        &nbsp;(Senior Lecturer;&nbsp;Director of Chinese Journalism, BSoSc (Hon) in Communication ;&nbsp;Director of MSSc in Media Management</p>
+
+                    <p style="font-size:18px">
+                        <a href="http://www.jour.hkbu.edu.hk/eng/people/dr-tsang-stephanie-jean/">
+                            <b>Stephanie Tsang</b>
+                        </a>
+                        &nbsp;(Research Assistant Professor)</p>
+
+                    <p style="font-size:18px">
+                        <a href="http://www.jour.hkbu.edu.hk/eng/people/dr-xinzhi-zhang/">
+                            <b>Xinzhi Zhang </b>
+                        </a>
+                        &nbsp;(Research Assistant Professor;&nbsp;Associate Programme Director of Data and Media Communication Concentration, BSoSc (Hon) in Communication)</p>
+                    <br/>
                             <br/>
                             <h2 class="major">Organizing Committee</h2>
                             <p style="font-size:15px">Xinzhi Zhang &nbsp (Corresponding)
