--- a/generic.html
+++ b/generic.html
@@ -116,7 +116,7 @@
                     <h2 class="major">Submit your work here</h2>
                     <p style="font-size:20px">Double check your files and submit them here. </p>
 
-                    <a href=# class="button">Submit</a>
+                    <a href=# class="button special" style="padding-left:1em; padding-right:1em">Submit</a>
 
 
 
