--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                     <li><a href="generic.html">Submission Guidelines</a></li>
                     <li><a href="reference.html">Case References</a></li>
-                    <li><a href="jury.html">Jury and Competition</a></li>
+                    <li><a href="jury.html">Jury and Organization</a></li>
 
                 </ul>
                 <a href="#" class="close">Close</a>
