--- a/jury.html
+++ b/jury.html
@@ -35,7 +35,7 @@
 
                     <li><a href="generic.html">Submission Guidelines</a></li>
                     <li><a href="reference.html">Case References</a></li>
-                    <li><a href="jury.html">Jury and Competition</a></li>
+                    <li><a href="jury.html">Jury and Organization</a></li>
                 </ul>
                 <a href="#" class="close">Close</a>
             </div>
@@ -45,7 +45,7 @@
         <section id="wrapper">
             <header>
                 <div class="inner">
-                    <h2>Rules and Procedures</h2>
+                    <h2>Jury and Organization</h2>
                     <!-- <p>Phasellus non pulvinar erat. Fusce tincidunt nisl eget ipsum.</p> -->
                 </div>
             </header>
