--- a/index.html
+++ b/index.html
@@ -358,8 +358,8 @@
 
                     <div class="container3">
 
-                        <div class="honrizontal"><img src="images/HKBUlogo.png" style="padding-top: 40px" /></div>
-                        <div class="honrizontal"><img src="images/SchoolComm.png" style="padding-top: 40px" /></div>
+                        <div class="honrizontal"><img src="images/HKBUlogo.png" style="padding-top: 40px;  width:170px; height:auto" /></div>
+                        <div class="honrizontal"><img src="images/SchoolComm.png" style="padding-top: 40px;  width:170px; height:auto" /></div>
 
                         <div class="honrizontal"><img src="images/JOURlogo.png" style="padding-top: 20px" /></div>
 
