--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<b>HKBU Data-driven Storytelling Competition 2018</b>
 		    <br/> 15 March - 18 March
 		    </p>
-		    <a href=# class="button special" style="padding-left:1em; padding-right:1em">Apply Now</a>
+		    <a href="https://goo.gl/forms/lPcQlMbklI04ytgg1" class="button special" style="padding-left:1em; padding-right:1em">Apply Now</a>
             </div>
         </section>
 
@@ -159,7 +159,7 @@
                                 </h2>
                                 <p>Participants registration deadline
                                 </p>
-                                <a href="#" class="button special" style="padding-left:1em; padding-right:1em">Apply Now</a>
+                                <a href="https://goo.gl/forms/lPcQlMbklI04ytgg1" class="button special" style="padding-left:1em; padding-right:1em">Apply Now</a>
                             </div>
                         </div>
                         <div class="container left">
