--- a/index.html
+++ b/index.html
@@ -358,12 +358,12 @@
 
                     <div class="container3">
 
-                        <div class="honrizontal"><img src="images/HKBUlogo.png" style="padding-top: 40px;  width:170px; height:auto" /></div>
-                        <div class="honrizontal"><img src="images/SchoolComm.png" style="padding-top: 40px;  width:170px; height:auto" /></div>
+                        <div class="horizontal"><img src="images/HKBUlogo.png" style="padding-top: 40px;  width:170px; height:auto" /></div>
+                        <div class="horizontal"><img src="images/SchoolComm.png" style="padding-top: 40px;  width:170px; height:auto" /></div>
 
-                        <div class="honrizontal"><img src="images/JOURlogo.png" style="padding-top: 20px" /></div>
+                        <div class="horizontal"><img src="images/JOURlogo.png" style="padding-top: 20px" /></div>
 
-                        <div class="honrizontal"><img src="images/DNNLogo.png" /></div>
+                        <div class="horizontal"><img src="images/DNNLogo.png" /></div>
 
 
                     </div>
