--- a/index.html
+++ b/index.html
@@ -358,13 +358,23 @@
 
                     <div class="container3">
 
-                        <div class="horizontal"><img src="images/HKBUlogo.png" style="padding-top: 40px;  width:170px; height:auto" /></div>
-                        <div class="horizontal"><img src="images/SchoolComm.png" style="padding-top: 40px;  width:170px; height:auto" /></div>
+                        <div class="horizontal">
+                            <img src="images/HKBU.png" style="width:150px; padding-top:3px" />
+                            <div class="content" style="font-size:20px; text-align:center"> <b style=" color:black">Hong Kong Baptist Univeristy</b></div>
+                        </div>
 
-                        <div class="horizontal"><img src="images/JOURlogo.png" style="padding-top: 20px" /></div>
 
-                        <div class="horizontal"><img src="images/DNNLogo.png" /></div>
+                        <div class="horizontal "><img src="images/COMM.png " style="padding-top:13px " />
+                            <div class="content" style="font-size:20px; text-align:center;padding-top:10px"> <b style="color:black">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;School of Communication</b></div>
+                        </div>
 
+                        <div class="horizontal "><img src="images/JOURlogo.png " style="padding-top: 34px " />
+                            <div class="content" style="font-size:20px; text-align:center;padding-top:22px"> <b style="color:black"> &nbsp;&nbsp;&nbsp;&nbsp;Department of Journalism</b></div>
+                        </div>
+
+                        <div class="horizontal "><img src="images/DNNLogo.png " />
+                            <div class="content" style="font-size:20px; text-align:center"><b style="color:black"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The Data & News Society</b></div>
+                        </div>
 
                     </div>
                 </div>
