--- a/rules.html
+++ b/rules.html
@@ -33,7 +33,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="rules.html">Rules and Procedures</a></li>
 
-                    <li><a href="generic.html">Submission Guidelines</a></li>
+                    <li><a href="submission.html">Submission Guidelines</a></li>
                     <li><a href="reference.html">Case References</a></li>
                     <li><a href="jury.html">Jury and Organization</a></li>
 
