--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
         <section id="banner">
             <div class="inner">
                 <div class="logo"><span class="icon fa-diamond"></span></div>
-                <h2>Data is Beautiful</h2>
+                <h2>"Data is Beautiful"</h2>
                 <p style="font-size:25px">
 			<b>HKBU Data-driven Storytelling Competition 2018</b>
-		    <br/> 15 March - 18 March
+		    <br/> 22 March - 25 March
 		    </p>
 		    <a href="https://goo.gl/forms/lPcQlMbklI04ytgg1" class="button special" style="padding-left:1em; padding-right:1em">Apply Now</a>
             </div>
@@ -92,7 +92,7 @@
                         <h2 class="major">Rules and Procedures</h2>
                         <ul>
                             <li>The competition is a 3-day "Marathon-alike" data driven news reporting competition. </li>
-                            <li>Create data-driven story within 72 hours starting from 15 March.</li>
+                            <li>Create data-driven story within 72 hours starting from 22 March.</li>
                             <li>All HKBU students are welcomed to join. </li>
                         </ul>
 
@@ -104,7 +104,7 @@
             <!-- Three -->
             <section id="three" class="wrapper spotlight style3">
                 <div class="inner">
-                    <a href="generic.html" class="image"><img src="images/notes.png" alt="" /></a>
+                    <a href="submission.html" class="image"><img src="images/notes.png" alt="" /></a>
                     <div class="content">
 
 
@@ -113,7 +113,7 @@
                         <h2 class="major">Submission Guidelines</h2>
                         <!-- <p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus
                             viverra, ex nulla cursus.</p> -->
-                        <a href="generic.html" class="special">Learn more</a>
+                        <a href="submission.html" class="special">Learn more</a>
                     </div>
                 </div>
             </section>
@@ -154,7 +154,7 @@
 			    <br/>
                         <div class="container right">
                             <div class="content2">
-                                <h2><u>12 March</u>
+                                <h2><u>18 March</u>
                                     <br/>23:59
                                 </h2>
                                 <p>Participants registration deadline
@@ -165,18 +165,18 @@
                         <div class="container left">
                             <div class="content2">
                                 <h2>
-                                    <U>15 March</U>
-                                    <br/>19:00, CVA 1022
+                                    <U>22 March</U>
+                                    <br/>18:30 - 21:30, WLB208
                                 </h2>
                                 <br/>
                                 <h3>Participants Briefing</h3>
                                 <ul>
 
-                                    <li>Forming groups</li>
+                                    <li>Forming groups on-site</li>
 
-                                    <li>Picking up ONE theme</li>
+                                    <li>Picking up ONE theme(the themes will be announced on-site)</li>
                                     <li>Picking up ONE submission format <br/>(Text or Video or Web)</li>
-                                    <li>Kicking off the project</li>
+                                    <li>Kicking off the project!</li>
                                 </ul>
                                 <a href="rules.html" class="button" style="padding-left:1em; padding-right:1em">Details</a>
 
@@ -184,14 +184,14 @@
                         </div>
                         <div class="container right">
                             <div class="content2">
-                                <h2><u>18 March</u>
+                                <h2><u>25 March</u>
                                     <br/>18:59
                                 </h2>
                                 <p>Uploading your works&nbsp;(4 files in total)</p>
 
                                 <ol>
                                     <li>
-                                        ONE of the three forms of story:
+                                        <font size="5px"><b>ONE</b></font> of the three forms of story:
                                         <br/>
                                         <font size="5px"><b>a PDF;</b></font>
                                         <br/>or
@@ -214,7 +214,7 @@
                         </div>
                         <div class="container left">
                             <div class="content2">
-                                <h2><u>25 March</u></h2>
+                                <h2><u>31 March</u></h2>
                                 <p>Result Announced</p>
                             </div>
                         </div>
@@ -293,7 +293,7 @@
                         <a href="http://www.jour.hkbu.edu.hk/eng/people/dr-tsang-stephanie-jean/">
                             <b>Stephanie Tsang</b>
                         </a>
-                        &nbsp;(Research Assistant Professor)</p>
+                        &nbsp;(Research Assistant Professor, Department of Journalism)</p>
 
                     <p style="font-size:16px">
                         <a href="http://www.jour.hkbu.edu.hk/eng/people/dr-xinzhi-zhang/">
@@ -311,10 +311,11 @@
                             <br/>
                             <br/>
                             <h2 class="major">Institutional Support</h2>
-                            <p style="font-size:16px">School of Communication
-                                <br/>Department of Journalism
-                                <br/>The Data & News Society
-                                <br/>The Data and Media Communication Concentration (DMC)
+                            <p style="font-size:16px">
+				    <a href="http://www.comm.hkbu.edu.hk/comd-www/english/front/index.htm">School of Communication</a>
+                                <br/><a href="http://www.jour.hkbu.edu.hk/eng/">Department of Journalism</a>
+				    <br/><a href="https://dnnsociety.org/">The Data & News Society</a>
+                                <br/><a href="http://bu-dmc.hkbu.edu.hk/">The Data and Media Communication Concentration (DMC)</a>
                             </p>
 
 
@@ -341,11 +342,10 @@
     <!-- Footer -->
     <section id="footer" class="wrapper.spotlight">
         <div class="inner">
-<!--          <h2 class="major">Contact</h2>
-            <p>Email:
-                <br/>Address:
-                <br/>Telephone:
-            </p> -->
+         <h2 class="major">Contact</h2>
+            <a href="jour@hkbu.edu.hk"><p>Email:jour@hkbu.edu.hk
+            
+		    </p></a>
             <ul class="copyright">
                 <li>&copy; 2018. All Rights Reserved.| <a href="http://www.hkbu.edu.hk/eng/main/index.jsp">Hong Kong Baptist University</a></li>
             </ul>
