--- a/jury.html
+++ b/jury.html
@@ -112,7 +112,7 @@
                         <a href="http://www.jour.hkbu.edu.hk/eng/people/dr-tsang-stephanie-jean/">
                             <b>Stephanie Tsang</b>
                         </a>
-                        &nbsp;(Research Assistant Professor)</p>
+                        &nbsp;(Research Assistant Professor, Department of Journalism)</p>
 
                     <p style="font-size:18px">
                         <a href="http://www.jour.hkbu.edu.hk/eng/people/dr-xinzhi-zhang/">
@@ -130,11 +130,12 @@
                     <br/>
                     <br/>
                     <h2 class="major">Institutional Support</h2>
-                    <p style="font-size:18px">School of Communication
-                        <br/>Department of Journalism
-                        <br/>The Data & News Society
-                        <br/>The Data and Media Communication Concentration (DMC)
-                    </p>
+                    <p style="font-size:16px">
+				    <a href="http://www.comm.hkbu.edu.hk/comd-www/english/front/index.htm">School of Communication</a>
+                    <br/><a href="http://www.jour.hkbu.edu.hk/eng/">Department of Journalism</a>
+				    <br/><a href="https://dnnsociety.org/">The Data & News Society</a>
+                     <br/><a href="http://bu-dmc.hkbu.edu.hk/">The Data and Media Communication Concentration (DMC)</a>
+                     </p>
 
 
 
