--- a/rules.html
+++ b/rules.html
@@ -64,11 +64,11 @@
                     <br/>
                     <h2 class="major">Procedure</h2>
                     <ol style="font-size:18px">
-                        <li>Participants will first register online. There will be a briefing session on <b><u>15 Mar 2018 (Thursday), pm 19:00 at CVA 1022</u></b>. During the briefing session, the organizers will announce three themes, and kick off the completion.
+                        <li>Participants will first register online. There will be a briefing session on <b><u>22 Mar 2018 (Thursday), 18:30 - 21:30 at WLB 208</u></b>. During the briefing session, the organizers will announce three themes, and kick off the completion.
                         </li><br/>
                         <li>Participants will choose <b>ONE</b> of the themes, and form a group (2 – 3 members per group) during the briefing session. Individuals or groups containing more than 3 people are not accepted. </li>
                         <br/>
-                        <li>After forming the groups and consolidating the theme, participants have <b>72 hours</b> to work on the topic. They will submit their work online on or before the deadline: <b><u>18 March 2018 (Sunday)</u></b>, pm 18:59. Late submissions
+                        <li>After forming the groups and consolidating the theme, participants have <b>72 hours</b> to work on the topic. They will submit their work online on or before the deadline: <b><u>25 March 2018 (Sunday)</u></b>, pm 18:59. Late submissions
                             will be disqualified.</li>
                         <br/>
                         <li>The jury panel will review all the qualified work. Results will be announced in two weeks. </li>
