--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
                                 <h3>Participants Briefing</h3>
                                 <ul>
 
-                                    <li>Forming groups on-site</li>
+                                    <li>Forming groups on site</li>
 
-                                    <li>Picking up ONE theme(the themes will be announced on-site)</li>
+                                    <li>Picking up ONE theme(the themes will be announced on site)</li>
                                     <li>Picking up ONE submission format <br/>(Text or Video or Web)</li>
                                     <li>Kicking off the project!</li>
                                 </ul>
