--- a/index.html
+++ b/index.html
@@ -343,9 +343,9 @@
     <section id="footer" class="wrapper.spotlight">
         <div class="inner">
          <h2 class="major">Contact</h2>
-            <a href="jour@hkbu.edu.hk"><p>Email:jour@hkbu.edu.hk
+            <p>Email:<a href="mailto:jour@hkbu.edu.hk">jour@hkbu.edu.hk
             
-		    </p></a>
+		    </a></p>
             <ul class="copyright">
                 <li>&copy; 2018. All Rights Reserved.| <a href="http://www.hkbu.edu.hk/eng/main/index.jsp">Hong Kong Baptist University</a></li>
             </ul>
