--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                                 </ol>
 
 
-                                <a href="generic.html" class="button" style="padding-left:1em; padding-right:1em">Details</a>
+                                <a href="submission.html" class="button" style="padding-left:1em; padding-right:1em">Details</a>
 
                             </div>
                         </div>
