--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
                         <div class="inner">
 
                             <h2 class="major">Jury Panel</h2>
+				<h1 style="font-size:20px"><u>Chair:</u></h1>
                          <p style="font-size:16px">
                         <a href="http://www.jour.hkbu.edu.hk/eng/people/mr-ck-lau/">
                             <b> CK Lau</b>
