--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
             
 		    </a></p>
             <ul class="copyright">
-                <li>&copy; 2018. All Rights Reserved.| <a href="http://www.hkbu.edu.hk/eng/main/index.jsp">Hong Kong Baptist University</a>| Web Designer: Bonnie Yu (DMC 2016 cohort)</li>
+                <li>&copy; 2018. All Rights Reserved.| <a href="http://www.hkbu.edu.hk/eng/main/index.jsp">Hong Kong Baptist University</a>&nbsp;| Web Designer: Bonnie Yu (DMC 2016 cohort)</li>
             </ul>
         </div>
     </section>
