--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
     <section id="footer" class="wrapper.spotlight">
         <div class="inner">
          <h2 class="major">Contact</h2>
-            <p>Email:<a href="mailto:jour@hkbu.edu.hk">jour@hkbu.edu.hk
+            <p>Email:&nbsp;<a href="mailto:jour@hkbu.edu.hk">jour@hkbu.edu.hk
             
 		    </a></p>
             <ul class="copyright">
