--- a/rules.html
+++ b/rules.html
@@ -56,7 +56,7 @@
                 <div class="inner">
 
                     <h2 class="major">Mode of competition</h2>
-                    <p style="font-size:18px">A 3-day (72 hours) “Marathon-alike” data-driven reporting competition</p>
+                    <p style="font-size:18px">A 3-day (72 hours) time-bound data-driven reporting competition</p>
 
 
                     <h2 class="major">Eligibility</h2>
