--- a/index.html
+++ b/index.html
@@ -343,10 +343,11 @@
     <!-- Footer -->
     <section id="footer" class="wrapper.spotlight">
         <div class="inner">
-         <h2 class="major">Contact</h2>
-            <p>Email:&nbsp;<a href="mailto:jour@hkbu.edu.hk">jour@hkbu.edu.hk
+         <h2 class="major">&nbsp;Contact</h2>
+		<ul class="contact">
+                <li class="fa-envelope"><a href="mailto:jour@hkbu.edu.hk">jour@hkbu.edu.hk</a></li>
+            </ul>
             
-		    </a></p>
             <ul class="copyright">
                 <li>&copy; 2018. All Rights Reserved.| <a href="http://www.hkbu.edu.hk/eng/main/index.jsp">Hong Kong Baptist University</a>&nbsp;| Web Designer: Bonnie Yu (DMC 2016 cohort)</li>
             </ul>
