--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 					</div> -->
                         <h2 class="major">Rules and Procedures</h2>
                         <ul>
-                            <li>The competition is a 3-day time-bound data driven news reporting competition. </li>
-                            <li>Create data-driven story within 72 hours starting from 22 March.</li>
+                            <li>The competition is a 3-day time-bound data-driven news reporting competition. </li>
+                            <li>Create a data-driven story within 72 hours starting from 22 March.</li>
                             <li>All HKBU students are welcomed to join. </li>
                         </ul>
 
