--- a/rules.html
+++ b/rules.html
@@ -93,6 +93,13 @@
                     </ol>
                     <br/>
 
+                     <h2 class="major">Awards</h2>
+                    <ul style="font-size:18px">
+                        <li>Champion(1 team, HKD 3,000)</li>
+                        <li>Honourable mentions(3 teams, HKD1,000 for each)</li>
+                        </ul>
+
+
                     <h2 class="major">Note</h2>
                     <p style="font-size:18px">All participants will be provided with the relevant information to start their projects on the briefing session. Teams may begin brainstorming prior to the event, but all works should be built within the three-day (72 hours) timeframe.</p>
 
