--- a/index.html
+++ b/index.html
@@ -94,7 +94,11 @@
                             <li>The competition is a 3-day time-bound data-driven news reporting competition. </li>
                             <li>Create a data-driven story within 72 hours starting from 22 March.</li>
                             <li>All HKBU students are welcomed to join. </li>
+		            <li><i><b>Awards</b></i>: <br/>Champion&nbsp;(&nbsp;1 team, HKD 3,000);<br/>Honourable mentions&nbsp;(&nbsp;3 teams, HKD1,000 for each)
+                            </li>
                         </ul>
+			    <br/>
+			    <br/>
 
                         <a href="rules.html" class="special">Learn more</a>
                     </div>
