--- a/rules.html
+++ b/rules.html
@@ -95,8 +95,8 @@
 
                      <h2 class="major">Awards</h2>
                     <ul style="font-size:18px">
-                        <li>Champion(1 team, HKD 3,000)</li>
-                        <li>Honourable mentions(3 teams, HKD1,000 for each)</li>
+                        <li>Champion&nbsp;(&nbsp;1 team, HKD 3,000)</li>
+                        <li>Honourable mentions &nbsp;(&nbsp;3 teams, HKD1,000 for each)</li>
                         </ul>
 
 
