--- a/index.html
+++ b/index.html
@@ -276,11 +276,11 @@
                         </a>
                         &nbsp;(Senior Lecturer;&nbsp;Director of International Journalism Programme,BSoSc (Hon) in Communication ;&nbsp;Associate Director of MA in International Journalism Programme)</p>
 
-                    <p style="font-size:16px">
+<!--                     <p style="font-size:16px">
                         <a href="http://www.jour.hkbu.edu.hk/eng/people/mr-pili-hu/">
                             <b>Pili Hu</b>
                         </a>
-                        &nbsp;(Lecturer;&nbsp; Management Committee Member of Data and Media Communication(DMC))</p>
+                        &nbsp;(Lecturer;&nbsp; Management Committee Member of Data and Media Communication(DMC))</p> -->
 
                     <p style="font-size:16px">
                         <a href="http://www.jour.hkbu.edu.hk/eng/people/ms-jenny-lam/">
