--- a/rules.html
+++ b/rules.html
@@ -68,7 +68,7 @@
                         </li><br/>
                         <li>Participants will choose <b>ONE</b> of the themes, and form a group (2 – 3 members per group) during the briefing session. Individuals or groups containing more than 3 people are not accepted. </li>
                         <br/>
-                        <li>After forming the groups and consolidating the theme, participants have <b>72 hours</b> to work on the topic. Participants can work on their projects anywhere within the 72-hour time frame.Participants need to submit their work online on or before the deadline: <b><u>25 March 2018 (Sunday)</u></b>, pm 18:59. Late submissions
+                        <li>After forming the groups and consolidating the theme, participants have <b>72 hours</b> to work on the topic. Participants can work on their projects anywhere within the 72-hour time frame.Participants need to submit their work online on or before the deadline: <b><u>25 March 2018 (Sunday)</u></b>,  23:58. Late submissions
                             will be disqualified.</li>
                         <br/>
                         <li>The jury panel will review all the qualified work. Results will be announced in two weeks. </li>
